// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package openpitrix;

// set go package name to pb
option go_package = "pb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

service AccountManager {
	rpc DescribeUsers (DescribeUsersRequest) returns (DescribeUsersResponse) {
		option (google.api.http) = { get: "/v1/users" };
	};
	rpc ModifyUser (ModifyUserRequest) returns (ModifyUserResponse) {
		option (google.api.http) = { patch: "/v1/users" body: "*" };
	};
	rpc DeleteUsers (DeleteUsersRequest) returns (DeleteUsersResponse) {
		option (google.api.http) = { delete: "/v1/users" body: "*" };
	};

	rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {
		option (google.api.http) = { post: "/v1/users/password:change" body: "*" };
	};
	rpc CreatePasswordReset (CreatePasswordResetRequest) returns (CreatePasswordResetResponse) {
		option (google.api.http) = { post: "/v1/users/password:reset" body: "*" };
	};

	// admin permission
	rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
		option (google.api.http) = { post: "/v1/users" body: "*" };
	};
	rpc GetPasswordReset (GetPasswordResetRequest) returns (GetPasswordResetResponse) {
		option (google.api.http) = { get: "/v1/users/password/reset/{reset_id=*}" };
	};
	rpc ValidateUserPassword (ValidateUserPasswordRequest) returns (ValidateUserPasswordResponse) {
		option (google.api.http) = { post: "/v1/users/password:validate" body: "*" };
	};

	// group
	rpc CreateGroup (CreateGroupRequest) returns (CreateGroupResponse) {
		option (google.api.http) = { post: "/v1/groups" body: "*" };
	};
	rpc DescribeGroups (DescribeGroupsRequest) returns (DescribeGroupsResponse) {
		option (google.api.http) = { get: "/v1/groups" };
	};
	rpc ModifyGroup (ModifyGroupRequest) returns (ModifyGroupResponse) {
		option (google.api.http) = { patch: "/v1/groups" body: "*" };
	};
	rpc DeleteGroups (DeleteGroupsRequest) returns (DeleteGroupsResponse) {
		option (google.api.http) = { delete: "/v1/groups" body: "*" };
	};
	rpc JoinGroup (JoinGroupRequest) returns (JoinGroupResponse) {
		option (google.api.http) = { post: "/v1/groups:join" body: "*" };
	};
	rpc LeaveGroup (LeaveGroupRequest) returns (LeaveGroupResponse) {
		option (google.api.http) = { post: "/v1/groups:leave" body: "*" };
	};
}


service TokenManager {
	rpc CreateClient (CreateClientRequest) returns (CreateClientResponse) {
		option (google.api.http) = { post: "/v1/oauth2/{user_id=*}/client" body: "*" };
	};

	// get access_token with client_credentials or password
	//
	// Ref:
	// - https://www.digitalocean.com/community/tutorials/an-introduction-to-oauth-2
	// - https://alexbilbie.com/guide-to-oauth-2-grants/
	// - https://tools.ietf.org/html/rfc6749#section-4.4
	//
	rpc Auth (AuthRequest) returns (AuthResponse) {
		option (google.api.http) = { post: "/v1/oauth2/auth" body: "*" };
	};

	// refresh access_token
	//
	// Ref: https://tools.ietf.org/html/rfc6749#section-6
	//
	rpc Token (TokenRequest) returns (TokenResponse) {
		option (google.api.http) = { post: "/v1/oauth2/token" body: "*" };
	};
}


message User {
	google.protobuf.StringValue user_id = 1;
	google.protobuf.StringValue username = 2;
	google.protobuf.StringValue email = 3;
	google.protobuf.StringValue role = 4; // default is user
	google.protobuf.StringValue description = 5;
	google.protobuf.StringValue status = 6;

	google.protobuf.Timestamp create_time = 7;
	google.protobuf.Timestamp update_time = 8;
	google.protobuf.Timestamp status_time = 9;
}

message Group {
	google.protobuf.StringValue group_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue status = 3;
	google.protobuf.StringValue description = 4;

	google.protobuf.Timestamp create_time = 5;
	google.protobuf.Timestamp update_time = 6;
	google.protobuf.Timestamp status_time = 7;
}


message DescribeUsersRequest {
	google.protobuf.StringValue search_word = 1;
	google.protobuf.StringValue sort_key = 2;
	google.protobuf.BoolValue reverse = 3;
	uint32 limit = 4;
	uint32 offset = 5;

	repeated string group_id = 11;
	repeated string user_id = 12;
	repeated string status = 13;
}
message DescribeUsersResponse {
	uint32 total_count = 1;
	repeated User user_set = 2;
}

message ModifyUserRequest {
	google.protobuf.StringValue user_id = 1;
	google.protobuf.StringValue email = 2; // for admin
	google.protobuf.StringValue username = 3;
	google.protobuf.StringValue role = 4; // for admin
	google.protobuf.StringValue description = 5;
}
message ModifyUserResponse {
	google.protobuf.StringValue user_id = 1;
}

message DeleteUsersRequest {
	repeated string user_id = 1;
}
message DeleteUsersResponse {
	repeated string user_id = 1;
}

message CreatePasswordResetRequest {
	google.protobuf.StringValue user_id = 1;
	google.protobuf.StringValue password = 2;
}
message CreatePasswordResetResponse {
	google.protobuf.StringValue user_id = 1;
	google.protobuf.StringValue reset_id = 2;
}

message ChangePasswordRequest {
	google.protobuf.StringValue new_password = 1;
	google.protobuf.StringValue reset_id = 2;
}
message ChangePasswordResponse {
	google.protobuf.StringValue user_id = 1;
}

message GetPasswordResetRequest {
	string reset_id = 1;
}
message GetPasswordResetResponse {
	string reset_id = 1;
	string user_id = 2;
}
message CreateUserRequest {
	google.protobuf.StringValue email = 1;
	google.protobuf.StringValue password = 2;
	google.protobuf.StringValue role = 3; // default is user
	google.protobuf.StringValue description = 4;
}
message CreateUserResponse {
	google.protobuf.StringValue user_id = 1;
}

message ValidateUserPasswordRequest {
	string email = 1;
	string password = 2;
}
message ValidateUserPasswordResponse {
	bool validated = 1;
}

message CreateGroupRequest {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue description = 2;
}
message CreateGroupResponse {
	google.protobuf.StringValue group_id = 1;
}


message DescribeGroupsRequest {
	google.protobuf.StringValue search_word = 1;
	google.protobuf.StringValue sort_key = 2;
	google.protobuf.BoolValue reverse = 3;
	uint32 limit = 4;
	uint32 offset = 5;

	repeated string group_id = 6;
	repeated string user_id = 7;
	repeated string status = 8;
}
message DescribeGroupsResponse {
	uint32 total_count = 1;
	repeated Group group_set = 2;
}

message ModifyGroupRequest {
	google.protobuf.StringValue group_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
}
message ModifyGroupResponse {
	google.protobuf.StringValue group_id = 1;
}

message DeleteGroupsRequest {
	repeated string group_id = 1;
}
message DeleteGroupsResponse {
	repeated string group_id = 1;
}

message JoinGroupRequest {
	repeated string group_id = 1;
	repeated string user_id = 2;
}
message JoinGroupResponse {
	repeated string group_id = 1;
	repeated string user_id = 2;
}

message LeaveGroupRequest {
	repeated string group_id = 1;
	repeated string user_id = 2;
}
message LeaveGroupResponse {
	repeated string group_id = 1;
	repeated string user_id = 2;
}


message CreateClientRequest {
	string user_id = 1;
}
message CreateClientResponse {
	string user_id = 1;
	string client_id = 2;
	string client_secret = 3;
}

message AuthRequest {
	string grant_type = 1; // client_credentials or password
	string client_id = 2;
	string client_secret = 3;
	string scope = 4;
	string username = 5;
	string password = 6;
}
message AuthResponse {
	string token_type = 1;
	string expires_in = 2;
	string access_token = 3;
	string refresh_token = 4;
	//	string id_token = 5;
}

message TokenRequest {
	string grant_type = 1; // refresh_token
	string client_id = 2;
	string client_secret = 3;
	string refresh_token = 4;
}
message TokenResponse {
	string token_type = 1;
	string expires_in = 2;
	string access_token = 3;
	string refresh_token = 4;
}
